--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
 
   * {
     -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+  }
+
+  img {
+    content-visibility: auto;
   }
 
   .sr-only {
